<resources>
    <string name="app_name">GetContacts</string>
    <string name="initialization">Initialization</string>
    <string name="retry">Retry</string>
    <string name="filter">Filter</string>
</resources>
